# poolSTL

./: .gitignore  CMakeLists.txt  README.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: on-release.yml  tests.yml
benchmark/: CMakeLists.txt  algorithm_bench.cpp  main.cpp  numeric_bench.cpp  utils.hpp
cmake/: config.cmake.in
include/poolstl/: algorithm  execution  iota_iter.hpp  numeric  poolstl.hpp  seq_fwd.hpp  variant_policy.hpp
include/poolstl/internal/: task_thread_pool.hpp  thread_impl.hpp  ttp_impl.hpp  utils.hpp
tests/: CMakeLists.txt  cpp11_test.cpp  inplace_merge_without_buffer.hpp  poolstl_test.cpp  seq_fwd_test.cpp  supplement_test.cpp  utils.hpp
tools/: amalgamate.py  amalgamate_header.hpp  create_amalgamates.sh
